fix (css): footer too wide on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,8 @@ body {
   font-size: 0.8em;
   margin-top: 1em;
 
-  width: 40em;
+  width: 30em;
+  max-width: 90%;
   text-align: center;
 }
 
